# frontier-template-with-validator-controller

./: Cargo.toml  myCustomSpec.json
frame/validator-controller/: Cargo.toml
frame/validator-controller/src/: lib.rs
template/node/src/: chain_spec.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
