[package]
name = "pallet-validator-controller"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true }
sp-runtime = { workspace = true }   
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
    "scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-session/std",
    "sp-runtime/std",
    "sp-std/std",
]